# Arson

./: Cargo.toml  README.md  index.html
src/: app.rs  config.rs  errors.rs  logging.rs  main.rs  titlebar.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: event_card.rs  events_list.rs  map_data.rs  map_display.rs  mod.rs  preferences.rs  response_display.rs  response_info.rs  titlebar.rs  user_info.rs
src/services/: acled_service.rs  mod.rs  storage_service.rs
src/states/: dashboard.rs  dataview.rs  login.rs  map.rs  mod.rs
src/types/: acled.rs  app.rs  mod.rs  user.rs
styles/: dashboard.css  login.css  map.css  styles.css  titlebar.css
