[package]
name = "arson-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console", "Window", "Document", "Element", "HtmlElement",
    "HtmlInputElement", "HtmlSelectElement", "Storage", "Location"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http"] }
console_error_panic_hook = "0.1"
urlencoding = "2.1"

[dependencies.js-sys]
version = "0.3"

[workspace]
members = ["src-tauri"]
